--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,6 @@
-.container {
-  display: flex;
-  justify-content: center;
-}
-
 .gameContainer {
-  width: 50%;
+  height: 100%;
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
