--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -18,26 +18,30 @@ header {
 }
 form {
   display: grid;
+  background-color: #222;
   padding: 1em;
-  background: #f9f9f9;
-  border: 1px solid #c1c1c1;
+  border: 1px solid #eee;
   margin: 2rem auto 0 auto;
+  width: 33%;
   max-width: 600px;
   padding: 1em;
+  text-align: center;
 }
 form input {
-  background: #fff;
-  border: 1px solid #9c9c9c;
+  background-color: #eee;
+  border: 1px solid #222;
 }
 form button {
-  background: lightgrey;
+  font-family: inherit;
+  background-color: #eee;
+  color: #222;
   padding: 0.7em;
   width: 100%;
   border: 0;
 }
 
 label {
-  padding: 0.5em 0.5em 0.5em 0;
+  padding: 0.5em 0.5em 0.5em 0.5em;
 }
 
 input {
