--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,5 +1,109 @@
+.game {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+}
+
+.gameInfo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+}
+
+.gameInfo div {
+  display: flex;
+  justify-content: center;
+}
+
+.gameHistory {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 30px;
+  margin-right: 30px;
+  border: 2px solid #eee;
+  &__wrapper {
+    width: 80%;
+  }
+  &__list {
+    font-size: 10px;
+    overflow-y: auto;
+    max-height: 480px;
+    & li {
+      margin: 12px 0;
+    }
+  }
+  &__order {
+    display: flex;
+    flex-direction: row;
+    &--blocker {
+      opacity: 0;
+    }
+    & div {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      & span {
+        text-align: center;
+        font-weight: bold;
+        margin: 0 12px;
+      }
+      & p {
+        cursor: pointer;
+        transition: all;
+        &:hover {
+          border-bottom: 1px solid white;
+        }
+      }
+    }
+  }
+}
+
+.gameBoard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .gameControl {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  & > * {
+    margin-bottom: 12px;
+  }
+  &__status {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  &__moves {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  &__drops {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+}
+
+.button {
+  color: #eee;
+  background-color: #222;
+  border: 2px solid #eee;
+  padding: 6px 12px;
+  min-width: 100px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+  user-select: none;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-size: 12px;
+  &:hover:not(:disabled) {
+    background-color: #eee;
+    color: #222;
+  }
 }
