--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Press Start 2P", sans-serif;
   color: #eee;
